Update git ignore

--- a/lab/src/Makefile
+++ b/lab/src/Makefile
@@ -1,13 +1,13 @@
 JC = javac
 JVM = java
-
 .SUFFIXES: .java .class
-
-default: DueDateCounter.java
 
 compile: DueDateCounter.java
 	$(JC) DueDateCounter.java
 
-run: DueDateCounter.class
-	java DueDateCounter
+run: 
+	$(JVM) DueDateCounter
+
+clean:
+	$(RM) *.class
 
